[gd_scene load_steps=54 format=3 uid="uid://b2xtu7ba2rsl6"]

[ext_resource type="Script" uid="uid://wgujldfv764m" path="res://levels/zurgblast/player/ranger_player.gd" id="1_t5s3s"]
[ext_resource type="PackedScene" uid="uid://ddtsjuq1v7xhd" path="res://levels/zurgblast/player/laser/laser_beam.tscn" id="2_6tx33"]
[ext_resource type="Texture2D" uid="uid://wdj46xqvb1bj" path="res://players/ellie_head.png" id="2_p4t0w"]
[ext_resource type="Texture2D" uid="uid://bnwfbag8ounsm" path="res://levels/zurgblast/player/player_sprites.png" id="3_fuqmf"]
[ext_resource type="Shader" uid="uid://b4g23qb6ele23" path="res://shaders/flash_color_2d.tres" id="3_wfjnu"]
[ext_resource type="Script" uid="uid://neoh44hq0jbr" path="res://utility/DamageHandler.gd" id="4_fuqmf"]
[ext_resource type="Script" uid="uid://b0uvg7paf1564" path="res://levels/zurgblast/player/laser/laser_launcher.gd" id="4_wfjnu"]
[ext_resource type="Script" uid="uid://bfluc1wi7eboh" path="res://levels/zurgblast/player/ranger_state_machine.gd" id="5_iw5bf"]
[ext_resource type="AudioStream" uid="uid://dmoknkt8tymq" path="res://levels/zurgblast/player/laser/laser5.mp3" id="6_vtdwa"]
[ext_resource type="AudioStream" uid="uid://qadmhfxx7qsq" path="res://levels/zurgblast/player/laser/laser6.mp3" id="7_mvrvd"]
[ext_resource type="Script" uid="uid://dlqutghrlrwjp" path="res://levels/zurgblast/player/ranger_state_idle.gd" id="8_6asnq"]
[ext_resource type="Script" uid="uid://c40hscugldg0x" path="res://levels/zurgblast/player/ranger_state_walk.gd" id="8_6tx33"]
[ext_resource type="AudioStream" uid="uid://6h1xt7nmmj44" path="res://levels/zurgblast/player/laser/laser7.mp3" id="8_qvlys"]
[ext_resource type="Script" uid="uid://mlnadeg6idv0" path="res://levels/zurgblast/player/ranger_state_fire.gd" id="9_6asnq"]
[ext_resource type="Script" uid="uid://b7q64s8h3lppk" path="res://levels/zurgblast/player/state_fall.gd" id="9_g0tfm"]
[ext_resource type="AudioStream" uid="uid://cx4s3ih2uc3cn" path="res://levels/zurgblast/player/sounds/sfx_movement_jump14_landing.wav" id="10_g0tfm"]
[ext_resource type="AudioStream" uid="uid://be5yae7bftshs" path="res://levels/zurgblast/player/sounds/sfx_movement_footstepsloop4_fast.wav" id="12_x8fx8"]
[ext_resource type="Script" uid="uid://c3yikdq00m2m1" path="res://utility/CharacterResource.gd" id="13_ic2u0"]
[ext_resource type="Script" uid="uid://ckjxtd37v7al7" path="res://levels/zurgblast/player/ranger_state_damage.gd" id="13_kdk1u"]
[ext_resource type="Theme" uid="uid://bcuyjrsty3xqf" path="res://ui/generic_health_bar_style.theme" id="15_ojsgv"]
[ext_resource type="AudioStream" uid="uid://djy0ealwux2op" path="res://levels/zurgblast/player/sounds/sfx_sounds_damage1.wav" id="19_jf7c3"]
[ext_resource type="AudioStream" uid="uid://bjyfsgdwrn4fg" path="res://levels/zurgblast/player/sounds/sfx_sounds_damage2.wav" id="20_t366r"]
[ext_resource type="AudioStream" uid="uid://cf1ghc3sotp8h" path="res://levels/zurgblast/player/sounds/sfx_sounds_damage3.wav" id="21_kwu3j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72rrw"]
shader = ExtResource("3_wfjnu")
shader_parameter/mix_color = Color(1, 0, 0, 1)
shader_parameter/ossilation_factor = 0.0
shader_parameter/min_intensity = 0.0
shader_parameter/max_intensity = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jf7c3"]
random_volume_offset_db = 2.33
streams_count = 3
stream_0/stream = ExtResource("6_vtdwa")
stream_1/stream = ExtResource("7_mvrvd")
stream_2/stream = ExtResource("8_qvlys")

[sub_resource type="ViewportTexture" id="ViewportTexture_ic2u0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_rq8gb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.29, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"action"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kdk1u"]
resource_name = "damaged"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector3(-0.207291, 1.13087, -0.01), Vector3(-0.0835617, 1.28444, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector3(0, 0, 0.331159), Vector3(0, 0, -0.0634955)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"damaged"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ljv5u"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0742586, 1.29853, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ojsgv"]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0173299, 1.26689, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"still"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/head:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fuqmf"]
resource_name = "interact"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.199686),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector3(-0.0152183, 1.26584, -0.01), Vector3(0.0825553, 1.21695, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.199686),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.280981)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"action"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_p4t0w"]
resource_name = "laser"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.163009),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector3(-0.0409982, 1.27633, -0.01), Vector3(-0.0729852, 1.28317, -0.01)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_laser"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"laser"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_g0tfm"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.27304, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.00944161, 1.2595, -0.01), Vector3(-0.00944161, 1.29994, -0.01), Vector3(-0.00944161, 1.2595, -0.01), Vector3(-0.00944161, 1.29994, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewport/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewport/AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x8fx8"]
_data = {
&"RESET": SubResource("Animation_rq8gb"),
&"damaged": SubResource("Animation_kdk1u"),
&"fall": SubResource("Animation_ljv5u"),
&"idle": SubResource("Animation_ojsgv"),
&"interact": SubResource("Animation_fuqmf"),
&"laser": SubResource("Animation_p4t0w"),
&"walk": SubResource("Animation_g0tfm")
}

[sub_resource type="Resource" id="Resource_jf7c3"]
script = ExtResource("13_ic2u0")
name = "HEALTH"
min_value = 0.0
max_value = 5.0
value = 5.0
metadata/_custom_type_script = "uid://c3yikdq00m2m1"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fuqmf"]
height = 1.52781

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rnemh"]
random_pitch = 1.38
random_volume_offset_db = 2.0
streams_count = 3
stream_0/stream = ExtResource("19_jf7c3")
stream_1/stream = ExtResource("20_t366r")
stream_2/stream = ExtResource("21_kwu3j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kdk1u"]
shader = ExtResource("3_wfjnu")
shader_parameter/mix_color = Color(0, 0.741813, 0.917863, 1)
shader_parameter/ossilation_factor = 0.0
shader_parameter/min_intensity = 0.0
shader_parameter/max_intensity = 0.9

[sub_resource type="AtlasTexture" id="AtlasTexture_iw5bf"]
atlas = ExtResource("3_fuqmf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sken"]
atlas = ExtResource("3_fuqmf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq8gb"]
atlas = ExtResource("3_fuqmf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0tfm"]
atlas = ExtResource("3_fuqmf")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdk1u"]
atlas = ExtResource("3_fuqmf")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojsgv"]
atlas = ExtResource("3_fuqmf")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1elfs"]
atlas = ExtResource("3_fuqmf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljv5u"]
atlas = ExtResource("3_fuqmf")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6asnq"]
atlas = ExtResource("3_fuqmf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tx33"]
atlas = ExtResource("3_fuqmf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfjnu"]
atlas = ExtResource("3_fuqmf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72rrw"]
atlas = ExtResource("3_fuqmf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic2u0"]
atlas = ExtResource("3_fuqmf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kdk1u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw5bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sken")
}],
"loop": true,
"name": &"action",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq8gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0tfm")
}],
"loop": true,
"name": &"damaged",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdk1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojsgv")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1elfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljv5u")
}],
"loop": true,
"name": &"laser",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6asnq")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfjnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72rrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic2u0")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_kdk1u"]
viewport_path = NodePath("Sprite3D/SubViewport")

[node name="RangerPlayer" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 21
floor_max_angle = 1.22173
floor_snap_length = 0.2
script = ExtResource("1_t5s3s")

[node name="Visuals" type="Node3D" parent="."]

[node name="head" type="Sprite3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29, -0.01)
material_overlay = SubResource("ShaderMaterial_72rrw")
pixel_size = 0.003
texture = ExtResource("2_p4t0w")

[node name="LaserSpawn" type="Marker3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.51152, 1.02304, 0)
script = ExtResource("4_wfjnu")
laser_beam = ExtResource("2_6tx33")
laser_beam_velocity = 8.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Visuals/LaserSpawn"]
stream = SubResource("AudioStreamRandomizer_jf7c3")
volume_db = 4.194

[node name="ranger" type="Sprite3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0222186, 0.796697, 0)
pixel_size = 0.05
alpha_cut = 2
texture_filter = 0
texture = SubResource("ViewportTexture_ic2u0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x8fx8")
}

[node name="DamageHandler" type="Node" parent="."]
script = ExtResource("4_fuqmf")
health = SubResource("Resource_jf7c3")
metadata/_custom_type_script = "uid://neoh44hq0jbr"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.740429, 0)
shape = SubResource("CapsuleShape3D_fuqmf")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animations", "visuals", "character", "state")]
script = ExtResource("5_iw5bf")
animations = NodePath("../AnimationPlayer")
visuals = NodePath("../Visuals")
character = NodePath("..")
state = NodePath("IdleState")
metadata/_custom_type_script = "uid://dswy2oapviqwo"

[node name="FallState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("9_g0tfm")
idle_state = NodePath("../IdleState")
air_speed = 4.0
fall_speed = 5.0
metadata/_custom_type_script = "uid://bhhkefilgcye1"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/FallState"]
bus = &"Effects"

[node name="AudioStreamPlayerEnd" type="AudioStreamPlayer" parent="StateMachine/FallState"]
stream = ExtResource("10_g0tfm")
bus = &"Effects"

[node name="WalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle", "laser", "fall")]
script = ExtResource("8_6tx33")
idle = NodePath("../IdleState")
laser = NodePath("../FireState")
fall = NodePath("../FallState")
metadata/_custom_type_script = "uid://bj0qqyveye3xt"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/WalkState"]
stream = ExtResource("12_x8fx8")
bus = &"Effects"

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("laser", "walk", "fall")]
script = ExtResource("8_6asnq")
laser = NodePath("../FireState")
walk = NodePath("../WalkState")
fall = NodePath("../FallState")
metadata/_custom_type_script = "uid://dlvbphqlqk6x3"

[node name="FireState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle")]
script = ExtResource("9_6asnq")
idle = NodePath("../IdleState")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="Damage" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle")]
script = ExtResource("13_kdk1u")
idle = NodePath("../IdleState")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="Timer" type="Timer" parent="StateMachine/Damage"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/Damage"]
stream = SubResource("AudioStreamRandomizer_rnemh")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(32, 32)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewport"]
material = SubResource("ShaderMaterial_kdk1u")
sprite_frames = SubResource("SpriteFrames_kdk1u")
animation = &"action"
offset = Vector2(16, 16)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.80518, 0)
texture = SubResource("ViewportTexture_kdk1u")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(100, 16)

[node name="ProgressBar" type="ProgressBar" parent="Sprite3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("15_ojsgv")
value = 50.0
show_percentage = false
